# learnopenal

./: README.md
docs/: 404.html  index.html  style.css
full-coding/: CMakeLists.txt
full-coding/scripts/: openALPitchingAndGaining.cpp  openALhearwithears.cpp  openALinit.cpp
website/: index.html
